--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
  		<li><a href="form.html">Post방식 요청 - form을 통해 요청보내기</a></li>
  		<li><a href="member/join.html">회원가입 페이지 이동</a></li>
  		<li><a href="member/mypage.html">회원정보 관리 페이지 이동</a></li> <!-- 아이디 입력받아 삭제처리 -->
+ 		<li><a href="MemberList">회원목록 페이지 이동</a></li> <!-- 링크로 이동 ==> get방식 -->
  	</ul>
 </body>
 </html>
